--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion '26.0.2'
     defaultConfig {
-        applicationId "com.example.admin.accidentdnr"
-        minSdkVersion 25
+        applicationId "com.cyient.iot.ambulance"
+        minSdkVersion 22
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -20,12 +20,22 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:26.0.0-alpha1'
+    //noinspection GradleCompatible,GradleCompatible
+    implementation 'com.android.support:appcompat-v7:26.+'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:design:26.0.0-alpha1'
+    implementation 'com.google.android.gms:play-services-maps:9.0.1'
+    implementation files('libs/activation.jar')
+    implementation 'com.amazonaws:aws-android-sdk-core:2.6.5'
+    implementation 'com.amazonaws:aws-android-sdk-ddb:2.4.4'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.5'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.5'
+    implementation files('libs/aws-android-sdk-cognitoidentityprovider-2.6.5.jar')
+    implementation files('libs/aws-android-sdk-ddb-document-2.6.5.jar')
+    implementation files('libs/aws-android-sdk-ddb-mapper-2.6.5.jar')
 }
